--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+body {
+    margin: 0;
+    padding: 0;
+
+}
+
+html {
+    box-sizing: border-box;
+}
+
 #validation-input {
     border: 3px solid #bdbdbd;
 }
